--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".SimpleVoteActivity" />
+        <activity android:name=".MemberVoteActivity"></activity>
+        <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SimpleVoteActivity" />
-        <activity android:name=".MemberVoteActivity"></activity>
+        <activity android:name=".login.UserRegisterActivity"/>
     </application>
 
 </manifest>
